<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="270dp" android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:minHeight="180dp"
              android:maxHeight="500dp"
              android:background="@color/icons">

    <LinearLayout android:orientation="vertical"
                  android:id="@+id/approve_dialog_edit_layout"
                  android:layout_width="fill_parent"
                  android:layout_height="130dp"
                  android:minHeight="100dp"
                  android:maxHeight="300dp">
        <TextView
                android:padding="10dp"
                android:text="@string/search_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex_regular"
                android:id="@+id/warning_box_text_view"
                android:textColor="@color/text_labels_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.533" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp">

        </TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="51dp"
                  android:orientation="horizontal" android:gravity="center"
                  android:layout_gravity="bottom"
                  android:showDividers="middle"
                  android:divider="@drawable/divider"
                  android:background="@android:color/transparent"
                  android:id="@+id/linearLayout"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginBottom="0dp" app:layout_constraintTop_toBottomOf="@+id/warning_box_text_view"
                  app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent">


        <Button android:layout_width="130dp" android:layout_height="fill_parent" android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_flex_regular"
                android:id="@+id/warning_box_delete_button"
                android:color="@color/text_view_color"
                android:text="@string/delete_button"
                android:textColor="@color/text_view_color"
                tools:ignore="SpeakableTextPresentCheck">

        </Button>
        <Button android:layout_width="130dp" android:layout_height="fill_parent" android:minHeight="0dp"
                android:minWidth="0dp"
                android:fontFamily="@font/roboto_flex_regular"
                android:textSize="12sp"
                android:color="@color/text_view_color"
                android:text="@string/cansel_button"
                android:textColor="@color/text_view_color"
                android:id="@+id/warning_box_cansel_button" tools:ignore="SpeakableTextPresentCheck"
                app:iconTint="#FFFFFF">

        </Button>
    </LinearLayout>
</LinearLayout>
        <!--
        <Button android:layout_width="85dp" android:layout_height="fill_parent" android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/warning_box_edit_apply_button"
                android:color="@color/text_view_color"
                android:text="@string/edit_button"
                android:fontFamily="@font/roboto_flex_regular"

                android:textSize="12sp"
                android:textColor="@color/text_view_color"
                tools:ignore="SpeakableTextPresentCheck">

        </Button>-->
